--- a/frontend/register.html
+++ b/frontend/register.html
@@ -4,49 +4,108 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register | QueueEase</title>
-  <link rel="stylesheet" href="css/styles.css">
+  
+  <!-- Google Font: Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+   <!-- Font Awesome for logout icon -->
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  
+  <!-- Custom Stylesheet -->
+  <link rel="stylesheet" href="css/register.css">
 </head>
 <body>
-  <form id="register-form">
-    <h2>Register</h2>
-    <input type="text" name="first_name" placeholder="First Name" required>
-    <input type="text" name="last_name" placeholder="Last Name" required>
-    <input type="text" name="address" placeholder="Address" required>
-    <input type="text" name="zip_code" placeholder="Zip Code" required>
-    <input type="tel" name="contact_number" placeholder="Contact Number" required>
-    <input type="email" name="email" placeholder="Email" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <button type="submit">Register</button>
-  </form>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-dark px-4">
+    <a class="navbar-brand" href="#">QueueEase</a>
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a href="index.html" class="logout-btn"><i class="fas fa-sign-out-alt"></i></a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
+  <!-- Registration Form -->
+  <div class="container d-flex justify-content-center align-items-center vh-100">
+    <form id="register-form" class="p-4">
+      <h2 class="text-center">New User Registration</h2>
+      
+      <div class="mb-3">
+        <input type="text" name="first_name" class="form-control" placeholder="First Name" required>
+      </div>
+      <div class="mb-3">
+        <input type="text" name="last_name" class="form-control" placeholder="Last Name" required>
+      </div>
+      <div class="mb-3">
+        <input type="text" name="address" class="form-control" placeholder="Complete Address" required>
+      </div>
+      <div class="mb-3">
+        <input type="text" name="zip_code" class="form-control" placeholder="Zip Code" required>
+      </div>
+      <div class="mb-3">
+        <input type="tel" name="contact_number" class="form-control" placeholder="Contact Number" required>
+      </div>
+      <div class="mb-3">
+        <input type="email" name="email" class="form-control" placeholder="Personal Email" required>
+      </div>
+      
+      <div class="d-flex justify-content-between">
+        <button type="button" class="btn btn-secondary">Cancel</button>
+        <button type="submit" class="btn btn-custom">Continue</button>
+      </div>
+    </form>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    ©2024 QueueEase. All rights reserved.
+  </footer>
+
+  <!-- Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Highlight Current Page -->
   <script>
-      document.getElementById('register-form').addEventListener('submit', async (event) => {
-          event.preventDefault();
+    const currentPage = window.location.pathname.split("/").pop();
+    if (currentPage === "Register.html") {
+      document.querySelector('.nav-link[href="#"]').classList.add("active");
+    }
+  </script>
 
-          const formData = new FormData(event.target);
-          const data = Object.fromEntries(formData.entries());
+  <!-- Form Submission Script -->
+  <script>
+    document.getElementById('register-form').addEventListener('submit', async (event) => {
+      event.preventDefault();
 
-          try {
-              const response = await fetch('/api/register', {
-                  method: 'POST',
-                  headers: {
-                      'Content-Type': 'application/json',
-                  },
-                  body: JSON.stringify(data),
-              });
+      const formData = new FormData(event.target);
+      const data = Object.fromEntries(formData.entries());
 
-              if (response.ok) {
-                  alert('Registration successful!');
-                  window.location.href = '/'; // Redirect to home or login page
-              } else {
-                  const error = await response.json();
-                  alert(`Error: ${error.message}`);
-              }
-          } catch (error) {
-              console.error('Error:', error);
-              alert('Something went wrong!');
-          }
-      });
+      try {
+        const response = await fetch('/api/register', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify(data),
+        });
+
+        if (response.ok) {
+          alert('Registration successful!');
+          window.location.href = '/'; // Redirect to home or login page
+        } else {
+          const error = await response.json();
+          alert(`Error: ${error.message}`);
+        }
+      } catch (error) {
+        console.error('Error:', error);
+        alert('Something went wrong!');
+      }
+    });
   </script>
 </body>
 </html>
