--- a/frontend/admin-dashboard.html
+++ b/frontend/admin-dashboard.html
@@ -23,9 +23,6 @@
     <a class="navbar-brand" href="#">QueueEase</a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="user-management.html">Manage Users</a></li>
-        <li class="nav-item"><a class="nav-link" href="queue-management.html">Manage Queue</a></li>
-        <li class="nav-item"><a class="nav-link" href="notifications.html">Send Notifications</a></li>
         <li class="nav-item">
           <a href="index.html" class="logout-btn"><i class="fas fa-sign-out-alt"></i></a>
         </li>
@@ -34,16 +31,38 @@
   </nav>
 
   <!-- Welcoming Message -->
-  <div style="padding-left: 30px; margin-top: 180px; max-width: 100%; width: 650px;">
-    <h3 style="color: #12372A; font-weight: 600; font-size: 50px;">Welcome Admin!</h3>
-    <p style="color: #12372A; font-size: 20px; line-height: 1.6;">
-      We're thrilled to have you onboard! As an admin, you're responsible for managing users, queues, and notifications. If you require assistance, don't hesitate to reach out. Wishing you a productive and enjoyable day ahead!
-    </p>
+  <div class="welcome-message" style="padding-left: 30px; margin-top: 50px; max-width: 100%; width: 650px;">
+    <h3 style="color: #12372A; font-weight: 600; font-size: 50px;">Welcome, Admin!</h3>
   </div>
+
+  <!-- Center Content -->
+  <div class="icon-container text-center">
+    <div class="row">
+      <div class="col-md-4">
+        <a href="user-management.html" class="icon-box">
+          <i class="fas fa-users fa-3x"></i>
+          <p>Manage Users</p>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="queue-management.html" class="icon-box">
+          <i class="fas fa-tasks fa-3x"></i>
+          <p>Manage Queue</p>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a href="notifications.html" class="icon-box">
+          <i class="fas fa-bell fa-3x"></i>
+          <p>Send Notifications</p>
+        </a>
+      </div>
+    </div>
+  </div>
+
 
   <!-- Footer -->
   <footer class="footer mt-5">
-    2024 QueueEase. All rights reserved.
+    ©2024 QueueEase. All rights reserved.
   </footer>
 
   <!-- Bootstrap Bundle with Popper -->
