--- a/frontend/user-queue.html
+++ b/frontend/user-queue.html
@@ -4,7 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Queue | QueueEase</title>
-  <link rel="stylesheet" href="css/styles.css">
+  
+ <!-- Google Font: Poppins -->
+ <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  
+ <!-- Bootstrap CSS -->
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Font Awesome for logout icon -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+ 
+ <!-- Custom Stylesheet -->
+ <link rel="stylesheet" href="css/user-queue.css">
+  
+  <!-- JavaScript for dynamic functionality -->
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
@@ -14,7 +27,7 @@
       const user_id = localStorage.getItem('id');
       if (!user_id) {
         alert('Failed to retrieve user ID. Please log in again.');
-        window.location.href = 'login.html'; // Redirect to login page
+        window.location.href = 'login.html';
         return null;
       }
       return user_id;
@@ -22,34 +35,34 @@
 
     // Update queue status dynamically
     async function updateQueueStatus() {
-  const user_id = getUserID();
-  if (!user_id) return;
+      const user_id = getUserID();
+      if (!user_id) return;
 
-  try {
-    const response = await fetch(`/api/users/queue-status/${user_id}`);
-    if (!response.ok) throw new Error('Failed to fetch queue status.');
+      try {
+        const response = await fetch(`/api/users/queue-status/${user_id}`);
+        if (!response.ok) throw new Error('Failed to fetch queue status.');
 
-    const data = await response.json();
-    const queueStats = document.getElementById('queueStats');
-    const { currently_serving, user_queue } = data;
+        const data = await response.json();
+        const queueStats = document.getElementById('queueStats');
+        const { currently_serving, user_queue } = data;
 
-    queueStats.innerHTML = `
-      <p><strong>Currently Serving:</strong> ${
-        currently_serving.queue_number !== 'None'
-          ? `Queue #${currently_serving.queue_number} (${currently_serving.service_name})`
-          : 'None'
-      }</p>
-      <p><strong>Your Queue Number:</strong> ${
-        user_queue.queue_number !== 'Not in queue'
-          ? `Queue #${user_queue.queue_number} (${user_queue.service_name})`
-          : 'Not in queue'
-      }</p>
-    `;
-  } catch (error) {
-    console.error('Error fetching queue status:', error);
-    document.getElementById('queueStats').innerHTML = '<p>Failed to load queue status.</p>';
-  }
-}
+        queueStats.innerHTML = `
+          <p><strong>Currently Serving:</strong> ${
+            currently_serving.queue_number !== 'None'
+              ? `Queue #${currently_serving.queue_number} (${currently_serving.service_name})`
+              : 'None'
+          }</p>
+          <p><strong>Your Queue Number:</strong> ${
+            user_queue.queue_number !== 'Not in queue'
+              ? `Queue #${user_queue.queue_number} (${user_queue.service_name})`
+              : 'Not in queue'
+          }</p>
+        `;
+      } catch (error) {
+        console.error('Error fetching queue status:', error);
+        document.getElementById('queueStats').innerHTML = '<p>Failed to load queue status.</p>';
+      }
+    }
 
     // Function to join the queue
     async function joinQueue() {
@@ -77,7 +90,7 @@
 
         if (response.ok) {
           alert('You have successfully joined the queue.');
-          socket.emit('queueUpdated'); // Notify server of the queue update
+          socket.emit('queueUpdated');
         } else {
           alert(result.error || 'Failed to join the queue.');
         }
@@ -115,39 +128,50 @@
       const joinQueueButton = document.getElementById('joinQueueButton');
       joinQueueButton.addEventListener('click', joinQueue);
 
-      // Update queue status every second
       setInterval(updateQueueStatus, 1000);
 
-      // Handle real-time updates via WebSocket
       socket.on('queueUpdated', updateQueueStatus);
     });
   </script>
 </head>
 <body>
   <header>
-    <h1>User Queue</h1>
-    <nav>
-      <a href="user-dashboard.html">Dashboard</a>
-      <a href="user-queue.html">Queue</a>
-      <a href="index.html">Logout</a>
-    </nav>
+    <div class="navbar">
+      <a href="user-dashboard.html">
+        <i class="fas fa-arrow-left"></i> Go back to Dashboard
+      </a>
+      <span class="queueease">|| QueueEase</span>
+    </div>
   </header>
-
-  <main>
-    <section id="queueStats">
-      <!-- Queue status will load dynamically here -->
-      <p>Loading queue status...</p>
+  
+  <!-- Main Content -->
+  <main class="content-container container mt-4">
+    <!-- Queue Status Section -->
+    <section id="queueStats" class="queue-section">
+      <h2>Queue Status</h2>
+      <div class="queue-status">
+        <p>Loading queue status...</p>
+      </div>
     </section>
 
-    <section>
+    <!-- Join Queue Section -->
+    <section class="queue-section mt-4">
       <h2>Join Queue</h2>
-      <label for="service_id">Choose a transaction:</label>
-      <select id="service_id" name="service_id" required>
+      <label for="service_id" class="form-label">Choose a transaction:</label>
+      <select id="service_id" name="service_id" class="form-select" required>
         <option value="" disabled selected>Select a service</option>
-      </select><br><br>
-
-      <button id="joinQueueButton">Join Queue</button>
+      </select>
+      <button id="joinQueueButton" class="btn btn-custom mt-3">Join Queue</button>
     </section>
   </main>
+
+    <!-- Footer -->
+  <footer class="text-center text-light py-3" style="background-color: #12372A;">
+    ©2024 QueueEase. All rights reserved.
+  </footer>
+
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
