--- a/frontend/login.html
+++ b/frontend/login.html
@@ -55,6 +55,8 @@
     ©2024 QueueEase. All rights reserved.
   </footer>
 
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="js/scripts.js"></script>
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
