--- a/frontend/queue-management.html
+++ b/frontend/queue-management.html
@@ -48,6 +48,10 @@
 		<script>
 			const socket = io();
 
+			// Initzialize variables for completed transactions
+			let completedTransactions = [];
+			let showingAllCompleted = false; // Flag to track whether all completed transactions are shown
+
 			// Function to dynamically update queue statistics
 			function updateQueueStats(queue) {
 				const queueStats = document.getElementById("queueStats");
@@ -76,7 +80,7 @@
 				const queueTable = document.getElementById("queueTable");
 				queueTable.innerHTML = ""; // Clear existing rows
 
-				queue.forEach((item, index) => {
+				queue.forEach((item) => {
 					const row = document.createElement("tr");
 					row.id = `queueRow-${item.queue_number}`;
 					row.innerHTML = `
@@ -97,20 +101,20 @@
           </td>
         `;
 					queueTable.appendChild(row);
-
-					// Highlight the first row in the live queue
-					if (index === 0) {
-						row.classList.add("highlight");
-					}
 				});
 			}
 
 			// Function to populate the completed transactions table dynamically
-			function populateCompletedTable(transactions) {
+			function populateCompletedTable() {
 				const completedTable = document.getElementById("completedTable");
 				completedTable.innerHTML = ""; // Clear existing rows
 
-				transactions.forEach((item) => {
+				//Decide how many transactions to display based on the flag
+				let transactionsToDisplay = showingAllCompleted
+					? allCompletedTransactions
+					: allCompletedTransactions.slice(0, 10); // Show only the first 10 transactions
+
+				transactionsToDisplay.forEach((item) => {
 					const row = document.createElement("tr");
 					row.innerHTML = `
           <td>${item.queue_number}</td>
@@ -220,10 +224,35 @@
 				try {
 					const response = await fetch("/api/admin/queue/completed");
 					const completedTransactions = await response.json();
-					populateCompletedTable(completedTransactions);
+					allCompletedTransactions = completedTransactions;
+
+					// Sort transactions by created_at descending (if available)
+					if (
+						allCompletedTransactions.length > 0 &&
+						allCompletedTransactions[0].created_at
+					) {
+						allCompletedTransactions.sort(
+							(a, b) => new Date(b.created_at) - new Date(a.created_at)
+						);
+					} else {
+						// If 'created_at' is not available, sort by 'queue_number' descending
+						allCompletedTransactions.sort(
+							(a, b) => b.queue_number - a.queue_number
+						);
+					}
+
+					populateCompletedTable();
 				} catch (error) {
 					console.error("Error fetching completed transactions:", error);
 				}
+			}
+
+			// Function to toggle between showing recent 10 and all completed transactions
+			function toggleCompletedTransactions() {
+				showingAllCompleted = !showingAllCompleted;
+				populateCompletedTable();
+				document.getElementById("toggleCompletedButton").textContent =
+					showingAllCompleted ? "Show Recent 10" : "See All";
 			}
 
 			// Real-time updates for queue
@@ -237,6 +266,12 @@
 				await fetchLiveQueue();
 				await fetchCompletedTransactions();
 			}, 5000);
+
+			// Initial fetch on page load
+			document.addEventListener("DOMContentLoaded", () => {
+				fetchLiveQueue();
+				fetchCompletedTransactions();
+			});
 
 			// ==========================
 			// New: Form to Create a Transaction (User Joining the Queue)
@@ -324,16 +359,16 @@
 			<section id="queueStats">
 				<!-- Queue statistics will load here dynamically -->
 			</section>
-			
+
 			<section>
 				<h2>Create Transaction (User Joining the Queue)</h2>
 				<form id="createTransactionForm" onsubmit="createTransaction(event)">
 					<label for="userId">User ID:</label>
 					<input type="number" id="userId" name="userId" required />
-	
+
 					<label for="serviceId">Service ID:</label>
 					<input type="number" id="serviceId" name="serviceId" required />
-	
+
 					<button type="submit">Join Queue</button>
 				</form>
 			</section>
@@ -359,6 +394,7 @@
 
 			<section>
 				<h2><i class="fas fa-check-circle"></i> Completed Transactions</h2>
+				<button id="toggleCompletedButton" onclick="toggleCompletedTransactions()">See All</button>
 				<table class="table table-bordered">
 					<thead>
 						<tr>
