--- a/backend/reports/report.html
+++ b/backend/reports/report.html
@@ -1,19 +1,30 @@
 <!-- backend/reports/report.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>QueueEase Reports</title>
     <link rel="stylesheet" href="reportStyles.css">
-    <!-- Chart.js CDN -->
+    <!-- Include Chart.js and ChartDataLabels Plugin -->
+     <!-- Font Awesome for icons -->
+		<link
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        rel="stylesheet"
+    />
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- Chart.js Data Labels Plugin CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
-    <!-- jsPDF CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 </head>
 <body>
+   <!-- Navigation Bar -->
+		<nav class="navbar">
+			<a class="navbar-brand" href="/admin-dashboard.html">
+				<i class="fas fa-arrow-left"></i> Go Back to Dashboard
+			</a>
+			<a class="navbar-text" href="#"> || QueueEase </a>
+		</nav>
+
+    <!-- Main Container -->
     <div class="container">
         <h1>QueueEase Reports</h1>
         <form id="reportForm">
@@ -47,9 +58,14 @@
             <div class="chart-container">
                 <canvas id="reportChart"></canvas>
             </div>
-            <button id="downloadPdf" onclick="downloadPDF()">Download PDF</button>
+            <!-- Download PDF Button Removed as per request -->
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer>
+        © 2024 QueueEase. All rights reserved.
+    </footer>
 
     <script src="reportScripts.js"></script>
 </body>
